# ts-api/swagger_server/models/__init__.py
@@ -3,6 +3,9 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.data_set import DataSet
+from swagger_server.models.data_set_request import DataSetRequest
+from swagger_server.models.data_set_response import DataSetResponse
 from swagger_server.models.market_break_point import MarketBreakPoint
 from swagger_server.models.market_break_point_response import MarketBreakPointResponse
 from swagger_server.models.model import Model
